--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,55 @@
+ 
 .App {
-  text-align: center;
-  
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #292b2c;
 
 }
 
-h1{
-  color: black;
-  font-weight: lighter;
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.board {
+  width: 500px;
+  height: 500px;
+  background-color: #f0ad4e;
+  border: 0;
+  box-shadow: 2px 5px 50px #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  border: 0;
+}
+
+.row {
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+}
+
+.square {
+  flex: 33%;
+  height: 100%;
+  border: 1px solid black;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
   font-size: 50px;
+  color: #292b2c;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.square:active {
+  background-color: #292b2c;
+  color: aliceblue;
+}
+.title {
+   
+  font-weight: 100;
+  font-style: normal;
+  text-align: center;
 }
